--- a/stremio-manifest.json
+++ b/stremio-manifest.json
@@ -5,8 +5,5 @@
  "version": "0.0.1",
  "types": ["series","movie"],
  "endpoint": "http://opensubtitles.strem.io/stremioget/stremio/v1",
- "logo": "http://www.strem.io/images/addons/opensubtitles-logo.png",
- "filter": { 
-  
- }
+ "logo": "http://www.strem.io/images/addons/opensubtitles-logo.png"
 }
