--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "test": "mocha --reporter spec --timeout 10000",
-    "postinstall": "if [ -n \"$STANDALONE\" ]; then npm install mongoose@4.x.x socks5-http-client@1.x.x; fi"
+    "test": "tape tests/*"
   },
   "repository": {
     "type": "git",
@@ -30,17 +29,16 @@
   "homepage": "https://github.com/Ivshti/stremio-opensubtitles",
   "dependencies": {
     "async": "1.x.x",
-    "lodash": "3.8.x",
+    "underscore": "1.8.x",
     "moment": "^2.10.6",
     "needle": "0.x.x",
     "opensubtitles": "0.0.1",
     "subtitles-grouping": "1.1.x",
-    "stremio-addons": "^1.28.0",
+    "stremio-addons": "2.0.x",
     "xmlrpc": "1.x.x",
     "opensubtitles-api": "^3.2.0"
   },
   "devDependencies": {
-    "chai": "1.0.x",
-    "mocha": "1.4.x"
+    
   }
 }
