--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "opensubtitles": "0.0.1",
     "subtitles-grouping": "1.2.x",
     "stremio-addons": "2.0.x",
-    "xmlrpc": "1.x.x",
-    "opensubtitles-api": "^3.2.0"
+    "xmlrpc": "1.x.x"
   },
   "devDependencies": {
     
