--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
   "homepage": "https://github.com/Ivshti/stremio-opensubtitles",
   "dependencies": {
     "async": "1.x.x",
-    "underscore": "1.8.x",
     "moment": "^2.10.6",
-    "simple-get": "2.3.x",
     "opensubtitles": "0.0.1",
-    "subtitles-grouping": "1.3.x",
+    "redis": "^2.6.3",
+    "simple-get": "2.3.x",
     "stremio-addons": "^2.5.1",
+    "subtitles-grouping": "1.3.x",
+    "underscore": "1.8.x",
     "xmlrpc": "1.x.x"
   },
   "devDependencies": {}
